feat: add SVG for fixing bugs and update teal color in CSS

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --color-white: #fff;
   --color-teal: #008080;
   --color-teal-light: rgba(0, 128, 128, 0.7);
-  --color-teal-soft: rgba(0, 128, 128, 0.3);
+  --color-teal-soft: #b2d9d9;
 
   --font-sans: "Inter", sans-serif;
 
